# fase-rv64

./: CMakeLists.txt  README.md
conf/: default.ini
example/: CMakeLists.txt
hardware/chisel/src/main/scala/: NulCtrlMP.scala
run/xilinx_kcu105/core1/: Makefile  README.md  boot.json  csr.csv  csr.json  patchv.py
run/xilinx_kcu105/core1/gateware/: build_xilinx_kcu105.sh  xilinx_kcu105.tcl  xilinx_kcu105.xdc  xilinx_kcu105_mem.init  xilinx_kcu105_rom.init
run/xilinx_kcu105/core4/: NulCPUCtrlMPWithUart.v  README.md  add_nulctrl_in_examplerocketsystem.py  build_xilinx_kcu105.sh  xilinx_kcu105.tcl  xilinx_kcu105.v  xilinx_kcu105_mem.init  xilinx_kcu105_rom.init
src/: common.h  configuration.cpp  htp.hpp  main.cpp
src/cpuv2/: atmsmp.cpp  atmsmp.h  cpuinterface2.cpp  cpuinterface2.h
src/launch/: launchv2.hpp  test_serial.hpp
src/serial/: serialfpga.cpp  serialfpga.h
src/sysv2/: sysv2.cpp  sysv2.h
src/udsocket/: udsocket.cpp  udsocket.h
